crates/hir-ty/tests/snapshots/jls_invocation_context__diamond_all_wildcard_target.snap
---
source: crates/hir-ty/tests/jls_invocation_context.rs
expression: out
---
FILE /src/com/example/ValueSnapshot.java:
package com.example;

class Value<R, V> {
}

class ValueSnapshot<T extends Value<R, ?>, R> {
    ValueSnapshot(T sourceValue) {
    }
}

class C {
    void m(Value<?, ?> value) {
        ValueSnapshot<?, ?> vs = new ValueSnapshot<>(value);
    }
}

method ValueSnapshot(T): <init>
  locals: l0: T
  exprs: 
method m(com.example.Value<?, ?>): void
  locals: l1: com.example.Value<?, ?> | l2: com.example.ValueSnapshot<?, ?>
  exprs: e0: com.example.Value<?, ?> | e1: com.example.ValueSnapshot<com.example.Value<?, ?>, java.lang.Object>
