crates/hir-ty/tests/snapshots/jls_invocation_context__method_ref_params_constrain_target.snap
---
source: crates/hir-ty/tests/jls_invocation_context.rs
expression: out
---
FILE /src/com/example/C.java:
package com.example;

import java.util.ArrayList;
import java.util.Comparator;

class OnlineFriend {
    OnlineStatus getStatus() {
        return null;
    }

    String getDisplayName() {
        return null;
    }
}

enum OnlineStatus {
    OFFLINE,
    ONLINE
}

class C {
    private static int getOnlineStatusOrder(OnlineFriend f) {
        return 0;
    }

    private static String getOnlineFriendName(OnlineFriend f) {
        return "";
    }

    void m(ArrayList<OnlineFriend> list) {
        list.sort(Comparator.comparingInt(C::getOnlineStatusOrder).thenComparing(C::getOnlineFriendName, String.CASE_INSENSITIVE_ORDER));
    }
}

method getStatus(): com.example.OnlineStatus
  locals: 
  exprs: e0: null
method getDisplayName(): java.lang.String
  locals: 
  exprs: e1: null
method getOnlineStatusOrder(com.example.OnlineFriend): int
  locals: l0: com.example.OnlineFriend
  exprs: e2: int
method getOnlineFriendName(com.example.OnlineFriend): java.lang.String
  locals: l1: com.example.OnlineFriend
  exprs: e3: java.lang.String
method m(java.util.ArrayList<com.example.OnlineFriend>): void
  locals: l2: java.util.ArrayList<com.example.OnlineFriend>
  exprs: e5: java.util.function.Function<? super com.example.OnlineFriend, ? extends java.lang.String> | e7: java.util.Comparator | e9: java.util.function.ToIntFunction<? super com.example.OnlineFriend> | e11: java.util.Comparator<com.example.OnlineFriend> | e12: java.util.Comparator<com.example.OnlineFriend> | e13: java.util.ArrayList<com.example.OnlineFriend> | e14: void
  diags: e12@30:67: unchecked-invocation: Unchecked method invocation: 'Comparator' to 'Comparator<? super String>'
