crates/hir-ty/tests/snapshots/jls_invocation_context__unbound_ref_receiver_constrains_target.snap
---
source: crates/hir-ty/tests/jls_invocation_context.rs
expression: out
---
FILE /src/com/example/C.java:
package com.example;

import java.util.Comparator;

class OnlineFriend {
    String getDisplayName() {
        return null;
    }
}

class C {
    private static String getOnlineFriendName(OnlineFriend f) {
        return "";
    }

    Comparator<OnlineFriend> m() {
        return (Comparator<OnlineFriend>) Comparator.comparing(OnlineFriend::getDisplayName)
            .thenComparing(C::getOnlineFriendName, String.CASE_INSENSITIVE_ORDER);
    }
}

method getDisplayName(): java.lang.String
  locals: 
  exprs: e0: null
method getOnlineFriendName(com.example.OnlineFriend): java.lang.String
  locals: l0: com.example.OnlineFriend
  exprs: e1: java.lang.String
method m(): java.util.Comparator<com.example.OnlineFriend>
  locals: 
  exprs: e3: java.util.function.Function<? super com.example.OnlineFriend, ? extends java.lang.String> | e5: java.util.Comparator | e7: java.util.function.Function<? super com.example.OnlineFriend, ? extends java.lang.String> | e9: java.util.Comparator<com.example.OnlineFriend> | e10: java.util.Comparator<com.example.OnlineFriend> | e11: java.util.Comparator<com.example.OnlineFriend>
  diags: e10@17:13: unchecked-invocation: Unchecked method invocation: 'Comparator' to 'Comparator<? super String>'
